@@ -1,4 +1,11 @@
- /* $Id: changelog,v 1.720 2000-02-10 01:49:01 bird Exp $ */
+ /* $Id: changelog,v 1.721 2000-02-10 18:48:04 cbratschi Exp $ */
+
+ 2000-02-10: Christoph Bratschi <cbratschi@datacomm.ch>
+	- USER32: added some stubs
+		  fixed wrong pixels at the right side of menu items
+	- COMCTL32: implemented LVS_NOSORTHEADER
+		    increased statusbar height (temporal hack)
+		    first steps of treeview rewrite
 
  2000-02-10: Sander van Leeuwen <sandervl@xs4all.nl>
 	- GDI32: Added support for memory map handles in CreateDIBSection
